--- a/public/index.html
+++ b/public/index.html
@@ -384,7 +384,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/p/%E5%85%A8%E5%9C%BA%E6%99%AFmd%E6%B5%8B%E8%AF%95/">全场景md测试</a>
+            <a href="/p/slugtest/">全场景md测试</a>
         </h2>
     
         
